fixed stretched images

--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -677,7 +677,7 @@ footer img {
 }
 
 .img-width {
-    width: 55px;
+    object-fit: contain;
 }
 
 footer .logo-title {
